# betfair-rs

./: CLAUDE.md  Cargo.toml
examples/: currency_rates.rs  dashboard.rs
src/: api_client.rs  streamer.rs  streaming_client.rs  unified_client.rs
src/dto/: account.rs  rpc.rs  streaming.rs
