[package]
name = "betfair-rs"
version = "0.3.3"
edition = "2021"
authors = ["Chuan Bai"]
description = "A high-performance Rust library for the Betfair Exchange API with real-time streaming, order management, and interactive terminal dashboard"
license = "MIT"
repository = "https://github.com/t2o2/betfair-rs"
homepage = "https://github.com/t2o2/betfair-rs"
documentation = "https://docs.rs/betfair-rs"
readme = "README.md"
keywords = ["betfair", "betting", "trading", "api", "streaming"]
categories = ["api-bindings", "web-programming", "asynchronous"]

[[bin]]
name = "betfair"
path = "src/bin/betfair.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"
toml = "0.8"
rand = "0.9"
rustls = { version = "0.23", features = ["ring"] } 
rustls-pemfile = "2.2"
rustls-pki-types = "1.0"
tokio-rustls = "0.26"
webpki-roots = "0.26"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
anyhow = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
rust_decimal = { version = "1.36", features = ["serde-float"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"
tempfile = "3.8"
pretty_assertions = "1.4"
rust_decimal_macros = "1.36"
